# os_2402

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .prototools  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  lefthook.yml  moon.yml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  go.yml  issue_reviver.yml  labeler.yml  python.yml  stale.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: go copy 2.yml  go.yml  python.yml
apps/dart/: .dockerignore  README.md  codecov.yml  melos.yaml  mise.toml  moon.yml  pubspec.yaml
apps/go/: .dockerignore  README.md  codecov.yml  go.mod  go.work  handlers.go  main.go  mise.toml  moon.yml
apps/mobile/: analysis_options.yaml  melos.yaml  pubspec.yaml
apps/python/: .dockerignore  README.md  mise.toml  pyproject.toml
apps/python/AIserver/: main.py
apps/python/AIserver/core/: config.py
apps/python/AIserver/services/models/: 会話識別番号_002.pkl  会話識別番号_003.pkl  会話識別番号_004.pkl  会話識別番号_005_mymt.pkl  会話識別番号_006.pkl  会話識別番号_006.txt
apps/python/AIserver/services/nlp/: makediary.py  meetopen.py
apps/python/project/AIserver/api/: diary.py  meet.py
apps/python/project/AIserver/models/: 会話識別番号_001.pkl
apps/python/project/AIserver/services/nlp/: meetclose.py
apps/solidity/: .env.example  args.js  hardhat.config.ts  mise.toml  moon.yml  package.json
docs/: README.md  architecture.md
docs/guide/: debugging.md  (+3 more)
scripts/: prepare-commit-msg
terraform/: mise.toml  moon.yml
(+42 files in other folders)
