[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["ᎪᏩᎬᎻᎪ <hibikeita18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "0.115.3"
strawberry-graphql = "0.247.0"
uvicorn = "0.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
umypy = "1.13.0"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
